[konnekte @ Arch-1:inform@tiker.net--2006-public%konnekte--mainline--0--patch-1] Basic client framework

--- a/client/ui/mainwindow.ui
+++ b/client/ui/mainwindow.ui
@@ -154,7 +154,7 @@
                                 <cstring>Duration</cstring>
                             </property>
                             <property name="text">
-                                <string>Since</string>
+                                <string>Duration</string>
                             </property>
                         </widget>
                         <widget class="QLayoutWidget" row="0" column="1">
