--- a/client/ui/mainwindow.ui
+++ b/client/ui/mainwindow.ui
@@ -1,15 +1,15 @@
 <!DOCTYPE UI><UI version="3.3" stdsetdef="1">
-<class>MainWindow</class>
+<class>MainWindowBase</class>
 <widget class="QMainWindow">
     <property name="name">
-        <cstring>MainWindow</cstring>
+        <cstring>MainWindowBase</cstring>
     </property>
     <property name="geometry">
         <rect>
             <x>0</x>
             <y>0</y>
-            <width>502</width>
-            <height>164</height>
+            <width>477</width>
+            <height>208</height>
         </rect>
     </property>
     <property name="caption">
@@ -21,7 +21,7 @@
         </property>
         <widget class="QLayoutWidget">
             <property name="name">
-                <cstring>layout4</cstring>
+                <cstring>layout11</cstring>
             </property>
             <vbox>
                 <property name="name">
@@ -62,7 +62,7 @@
                     <property name="sizeHint">
                         <size>
                             <width>20</width>
-                            <height>40</height>
+                            <height>20</height>
                         </size>
                     </property>
                 </spacer>
@@ -95,7 +95,7 @@
         </widget>
         <widget class="QLayoutWidget">
             <property name="name">
-                <cstring>layout14</cstring>
+                <cstring>layout10</cstring>
             </property>
             <vbox>
                 <property name="name">
@@ -103,12 +103,20 @@
                 </property>
                 <widget class="QLayoutWidget">
                     <property name="name">
-                        <cstring>layout13</cstring>
+                        <cstring>layout6</cstring>
                     </property>
                     <grid>
                         <property name="name">
                             <cstring>unnamed</cstring>
                         </property>
+                        <widget class="QLabel" row="0" column="0">
+                            <property name="name">
+                                <cstring>textLabel1</cstring>
+                            </property>
+                            <property name="text">
+                                <string>State</string>
+                            </property>
+                        </widget>
                         <widget class="QLabel" row="3" column="1">
                             <property name="name">
                                 <cstring>lblStation</cstring>
@@ -141,14 +149,6 @@
                                 <string>Connection</string>
                             </property>
                         </widget>
-                        <widget class="QLabel" row="3" column="0">
-                            <property name="name">
-                                <cstring>textLabel5</cstring>
-                            </property>
-                            <property name="text">
-                                <string>Held by</string>
-                            </property>
-                        </widget>
                         <widget class="QLabel" row="2" column="0">
                             <property name="name">
                                 <cstring>Duration</cstring>
@@ -157,46 +157,28 @@
                                 <string>Duration</string>
                             </property>
                         </widget>
-                        <widget class="QLayoutWidget" row="0" column="1">
+                        <widget class="QLabel" row="3" column="0">
                             <property name="name">
-                                <cstring>layout5</cstring>
-                            </property>
-                            <hbox>
-                                <property name="name">
-                                    <cstring>unnamed</cstring>
-                                </property>
-                                <widget class="KLed">
-                                    <property name="name">
-                                        <cstring>kLed1</cstring>
-                                    </property>
-                                    <property name="state">
-                                        <enum>Off</enum>
-                                    </property>
-                                </widget>
-                                <widget class="QLabel">
-                                    <property name="name">
-                                        <cstring>lblState</cstring>
-                                    </property>
-                                    <property name="sizePolicy">
-                                        <sizepolicy>
-                                            <hsizetype>7</hsizetype>
-                                            <vsizetype>5</vsizetype>
-                                            <horstretch>0</horstretch>
-                                            <verstretch>0</verstretch>
-                                        </sizepolicy>
-                                    </property>
-                                    <property name="text">
-                                        <string>textLabel2</string>
-                                    </property>
-                                </widget>
-                            </hbox>
-                        </widget>
-                        <widget class="QLabel" row="0" column="0">
-                            <property name="name">
-                                <cstring>textLabel1</cstring>
+                                <cstring>textLabel5</cstring>
                             </property>
                             <property name="text">
-                                <string>State</string>
+                                <string>Held by</string>
+                            </property>
+                        </widget>
+                        <widget class="QLabel" row="0" column="1">
+                            <property name="name">
+                                <cstring>lblState</cstring>
+                            </property>
+                            <property name="sizePolicy">
+                                <sizepolicy>
+                                    <hsizetype>7</hsizetype>
+                                    <vsizetype>5</vsizetype>
+                                    <horstretch>0</horstretch>
+                                    <verstretch>0</verstretch>
+                                </sizepolicy>
+                            </property>
+                            <property name="text">
+                                <string>textLabel2</string>
                             </property>
                         </widget>
                     </grid>
@@ -214,13 +196,13 @@
                     <property name="sizeHint">
                         <size>
                             <width>20</width>
-                            <height>28</height>
+                            <height>16</height>
                         </size>
                     </property>
                 </spacer>
                 <widget class="QLayoutWidget">
                     <property name="name">
-                        <cstring>layout3</cstring>
+                        <cstring>layout9</cstring>
                     </property>
                     <hbox>
                         <property name="name">
@@ -231,7 +213,7 @@
                                 <cstring>textLabel7</cstring>
                             </property>
                             <property name="text">
-                                <string>&amp;Station name</string>
+                                <string>Station &amp;Name</string>
                             </property>
                             <property name="buddy" stdset="0">
                                 <cstring>editStation</cstring>
@@ -244,14 +226,89 @@
                         </widget>
                     </hbox>
                 </widget>
+                <widget class="QLayoutWidget">
+                    <property name="name">
+                        <cstring>layout8</cstring>
+                    </property>
+                    <hbox>
+                        <property name="name">
+                            <cstring>unnamed</cstring>
+                        </property>
+                        <widget class="QLabel">
+                            <property name="name">
+                                <cstring>textLabel1_2</cstring>
+                            </property>
+                            <property name="text">
+                                <string>Station &amp;Password</string>
+                            </property>
+                            <property name="buddy" stdset="0">
+                                <cstring>editPassword</cstring>
+                            </property>
+                        </widget>
+                        <widget class="QLineEdit">
+                            <property name="name">
+                                <cstring>editPassword</cstring>
+                            </property>
+                            <property name="echoMode">
+                                <enum>Password</enum>
+                            </property>
+                        </widget>
+                    </hbox>
+                </widget>
             </vbox>
         </widget>
     </hbox>
 </widget>
+<menubar>
+    <property name="name">
+        <cstring>MenuBarEditor</cstring>
+    </property>
+    <item text="&amp;File" name="File">
+        <action name="actionQuit"/>
+    </item>
+    <item text="&amp;Help" name="Help">
+        <action name="actionAbout"/>
+    </item>
+</menubar>
 <toolbars>
 </toolbars>
+<actions>
+    <action>
+        <property name="name">
+            <cstring>actionQuit</cstring>
+        </property>
+        <property name="text">
+            <string>Quit</string>
+        </property>
+        <property name="menuText">
+            <string>&amp;Quit</string>
+        </property>
+    </action>
+    <action>
+        <property name="name">
+            <cstring>actionAbout</cstring>
+        </property>
+        <property name="text">
+            <string>About Konnekte...</string>
+        </property>
+        <property name="menuText">
+            <string>About &amp;Konnekte...</string>
+        </property>
+    </action>
+</actions>
+<connections>
+    <connection>
+        <sender>actionQuit</sender>
+        <signal>activated()</signal>
+        <receiver>MainWindowBase</receiver>
+        <slot>close()</slot>
+    </connection>
+</connections>
+<includes>
+    <include location="local" impldecl="in implementation">mainwindow.ui.h</include>
+</includes>
+<slots>
+    <slot>actionQuit_destroyed( QObject * )</slot>
+</slots>
 <layoutdefaults spacing="6" margin="11"/>
-<includehints>
-    <includehint>kled.h</includehint>
-</includehints>
 </UI>
