--- a/client/ui/connectwindow.ui
+++ b/client/ui/connectwindow.ui
@@ -19,10 +19,31 @@
         <property name="name">
             <cstring>unnamed</cstring>
         </property>
-        <widget class="QComboBox">
+        <widget class="QLayoutWidget">
             <property name="name">
-                <cstring>comboConnection</cstring>
+                <cstring>layout8</cstring>
             </property>
+            <hbox>
+                <property name="name">
+                    <cstring>unnamed</cstring>
+                </property>
+                <widget class="QLabel">
+                    <property name="name">
+                        <cstring>textLabel1</cstring>
+                    </property>
+                    <property name="text">
+                        <string>&amp;Connection</string>
+                    </property>
+                    <property name="buddy" stdset="0">
+                        <cstring>comboConnection</cstring>
+                    </property>
+                </widget>
+                <widget class="QComboBox">
+                    <property name="name">
+                        <cstring>comboConnection</cstring>
+                    </property>
+                </widget>
+            </hbox>
         </widget>
         <widget class="QLabel">
             <property name="name">
